# MachineLearningLib

./: README.md
DLL/: CMakeLists.txt  Cluster.h  KMeans.cpp  Point.cpp  Point.h  library.cpp  library.h
DLLExec/: CMakeLists.txt  Cluster.cpp  KMeans.h  Linear.h  Perceptron.cpp  Perceptron.h  Radial.cpp  Radial.h  main.cpp
pythonConsumeDLL/: MLLib.py  dataset_processing.py  main.py  perceptron.py  test.py  test_cases.py
